Fix structure creation in node factory